# SisyphosDice

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: settings.json
data/levels/: testStage.json
include/: chunk.h  entity.h  entity_manager.h  hitbox.h  level.h  lists.h  main_camera.h  misc_math.h  particle.h
resources/: entity_tags.json
resources/data/: entity_tags.json  settings.json
resources/levels/: testStage.json  testStage.xcf
src/: camera.c  camera.h  camera.py  chunk.h  collision_system.c  collision_system.h  entity.c  entity.h  entity.py  entity_manager.c  entity_manager.h  entity_manager.py  level.c  level.h  level.py  lists.c  main.c  main.py  main_camera.c  misc_math.c  particle.c  player.py  state_manager.py  technical.c  technical.h
src/modules/: font.py  image_sequence.py  particle.py  particle_system.py
